# ToyCompile

./: .gitignore  COPYRIGHT  README.md
.github/workflows/: cmake-ubuntu-build.yml
JFLAP/: c-dfa.jff  c-dfa.tcdf
doc/: ABI.md  ToyCompile IR 设计说明.md  readme.md
references/: ansi-c.lex
resources/: ansi-c.tcey.yacc  c-dfa.jff  c-dfa.tcdf  readme.md
resources/archive/: ansi-c-mod.tcey.yacc  ansi-c.tcey.yacc
resources/test/: easy.c.txt  tj-demo1.c.txt  tj-demo2.c.txt
src/: CMakeLists.txt  readme.md
src/core/: AstNode.cpp  AstNode.h  CMakeLists.txt  Dfa.cpp  Dfa.h  Grammar.cpp  Grammar.h  Intel386AssemblyGenerator.cpp  Intel386AssemblyGenerator.h  Lexer.cpp  Lexer.h  Lr1Grammar.cpp  Lr1Grammar.h  LrParserTable.cpp  LrParserTable.h  Parser.cpp  Parser.h  SymbolKinds.cpp  SymbolKinds.def  SymbolKinds.h  Token.cpp  Token.h  TokenKinds.cpp  TokenKinds.def  TokenKinds.h  YaccTcey.cpp  YaccTcey.h  config.cpp  config.h
src/core/tcir/: IrCode.h  IrContainer.cpp  IrContainer.h  IrGenerator.cpp  IrGenerator.h  SymbolTable.cpp  SymbolTable.h  ValueType.cpp  ValueType.h
src/include/tc/core/: AstNode.h  Dfa.h  Grammar.h  Intel386AssemblyGenerator.h  Lexer.h  Lr1Grammar.h  LrParserTable.h  Parser.h  SymbolKinds.def  SymbolKinds.h  Token.h  TokenKinds.def  TokenKinds.h  YaccTcey.h  config.h
src/include/tc/core/tcir/: IrCode.h  IrContainer.h  IrGenerator.h  SymbolTable.h  ValueType.h
src/include/tc/main/: TcSubProgram.h
src/include/tc/main/LexerCli/: LexerCli.h
src/include/tc/main/LexerServer/: LexerServer.h
src/include/tc/main/ParserCli/: ParserCli.h
src/include/tc/main/UniCli/: UniCli.h
src/include/tc/utils/: ConsoleColorPad.h  CppReflect.h
src/main/: CMakeLists.txt  TcSubProgram.h  main.cpp
src/main/LexerCli/: LexerCli.cpp  LexerCli.h
src/main/LexerServer/: LexerServer.cpp
src/main/ParserCli/: ParserCli.cpp  ParserCli.h
src/main/UniCli/: UniCli.cpp  UniCli.h
src/main/UniServer/: UniServer.cpp  UniServer.h
src/utils/: ConsoleColorPad.h  CppReflect.h
tools/: readme.md
tools/ToyCompileToolsKt/: .gitignore  build.gradle.kts  settings.gradle.kts
tools/ToyCompileToolsKt/src/main/kotlin/: Jff2Tcdf.kt
